# aoc2024

./: README.md  aoc2024.cabal
01_Historian_Hysteria/: solution_1.hs  solution_2.hs
02_Red-nosed_Reports/: solution_1.hs  solution_2.hs
03_Mull_it_over/: solution_1.hs  solution_2.hs
04_Ceres_search/: solution_1.hs  solution_2.hs
05_Print_queue/: solution_1.hs  solution_2.hs
06_Guard_Gallivant/: solution_1.hs  solution_2.hs
07_Bridge_repair/: solution_1.hs  solution_2.hs
08_Resonant_collinearity/: solution_1.hs  solution_2.hs
09_Disk_fragmenter/: solution_1.hs  solution_2.hs
10_Hoof_it/: solution_1.hs  solution_2.hs
11_Plutonian_pebbles/: solution_1.hs  solution_2.hs  solution_2_hash.hs  solution_2_trie.hs
12_Garden_groups/: solution_1.hs  solution_2.hs
