cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
build-type:         Simple

common basics
  default-language:   Haskell2010
  default-extensions: TupleSections, DeriveGeneric
  ghc-options:        -Wall
  build-depends:      base, containers

executable day01_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 01_Historian_Hysteria

executable day01_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 01_Historian_Hysteria

executable day02_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 02_Red-nosed_Reports

executable day02_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 02_Red-nosed_Reports

executable day03_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 03_Mull_it_over

executable day03_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 03_Mull_it_over

executable day04_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 04_Ceres_search

executable day04_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 04_Ceres_search

executable day05_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 05_Print_queue

executable day05_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 05_Print_queue
