cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
build-type:         Simple

common basics
  default-language:   Haskell2010
  default-extensions: TupleSections, DeriveGeneric
  ghc-options:        -Wall
  build-depends:      base, containers, mtl, extra, lens, array

executable day01_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 01_Historian_Hysteria

executable day01_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 01_Historian_Hysteria

executable day02_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 02_Red-nosed_Reports

executable day02_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 02_Red-nosed_Reports

executable day03_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 03_Mull_it_over

executable day03_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 03_Mull_it_over

executable day04_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 04_Ceres_search

executable day04_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 04_Ceres_search

executable day05_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 05_Print_queue

executable day05_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 05_Print_queue

executable day06_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 06_Guard_Gallivant

executable day06_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 06_Guard_Gallivant

executable day07_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 07_Bridge_repair

executable day07_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 07_Bridge_repair

executable day08_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 08_Resonant_collinearity

executable day08_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 08_Resonant_collinearity

executable day09_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 09_Disk_fragmenter

executable day09_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 09_Disk_fragmenter

executable day10_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 10_Hoof_it

executable day10_2
  import:         basics
  main-is:        solution_2.hs
  hs-source-dirs: 10_Hoof_it

executable day11_1
  import:         basics
  main-is:        solution_1.hs
  hs-source-dirs: 11_Plutonian_pebbles
